<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="@color/transparent" />

    <scu.mingyuan.com.carmanager.myview.MyBanner
        android:id="@+id/myBanner"
        android:layout_width="fill_parent"
        android:layout_height="160dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="@color/whiteDivideLine" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/white_bg_ripple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_ecg" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/accessories_query"
                    android:textColor="@color/blackPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:text="@string/accessories_query_des"
                    android:textColor="@color/blackLight"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical" />

        <LinearLayout
            android:id="@+id/layout_add_mycar"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/white_bg_ripple"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_healthy_record" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:text="@string/add_car"
                    android:textColor="@color/blackPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:text="@string/acc_car_des"
                    android:textColor="@color/blackLight"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="@color/whiteDivideLine" />

</LinearLayout>