<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/whiteLight"
                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/erro_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/icon_erro" />

            <TextView
                android:id="@+id/erro_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorAlert"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="@color/blackPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/account_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_weight="8"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_account"
                android:imeOptions="actionSend"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/clear_account"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/icon_clear" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/blackPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_weight="8"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/clear_password"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/icon_clear" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_blue_ripple"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@drawable/btn_text_color_white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
